# rolldown

./: CHANGELOG.md  cliff.toml  justfile  knip.jsonc  package.json  pnpm-lock.yaml
.github/workflows/: autofix.yml  cache-warmup.yml  ci.yml  prepare-release.yml  publish-to-npm.yml  reusable-release-build.yml  update-test-dependencies.yml
crates/rolldown/src/utils/: prepare_build_context.rs  (+1 more)
crates/rolldown_plugin_transform/: Cargo.toml
crates/rolldown_plugin_transform/src/: lib.rs
crates/rolldown_plugin_vite_json/: README.md
crates/rolldown_plugin_vite_load_fallback/: README.md
crates/rolldown_plugin_vite_manifest/: README.md
crates/rolldown_plugin_vite_module_preload_polyfill/: README.md
crates/rolldown_plugin_vite_wasm_fallback/: README.md
crates/rolldown_plugin_vite_wasm_helper/: README.md
crates/rolldown_testing/: _config.schema.json
crates/rolldown_testing/src/: tsconfig.json
examples/basic-typescript/: rolldown.config.js
examples/basic-vue/: package.json  rolldown.config.js
examples/chunk-import-map/: package.json  rolldown.config.js
examples/hmr-raw/: package.json
examples/isolated-decl/: package.json  rolldown.config.js
examples/native-magic-string/: package.json  rolldown.config.js
examples/par-plugin/: package.json
examples/par-plugin/parallel-babel-plugin/: impl.js  index.js
examples/par-plugin/parallel-esbuild-plugin/: impl.js
examples/par-plugin/parallel-noop-plugin/: impl.js
examples/rollup-plugin-esbuild/: package.json  rolldown.config.js
examples/styled-components-native/: package.json  rolldown.config.js
(+18 files in other folders)
