[package]
name = "rolldown_plugin_transform"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
itertools = { workspace = true }
oxc = { workspace = true }
rolldown_common = { workspace = true }
rolldown_error = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils = { workspace = true }
swc_common = "11.1.3"
swc_ecma_ast = "11.0.0"
swc_ecma_codegen = "13.2.0"
swc_ecma_parser = "14.0.2"
swc_ecma_transforms_base = "15.1.1"
swc_ecma_transforms_compat = "17.0.0"
swc_ecma_transforms_react = "17.0.0"
swc_ecma_transforms_typescript = "17.0.0"
swc_ecma_visit = "11.0.0"
